@@ -72,6 +72,7 @@ USER DOCUMENTATION
        of searching. The sections are as follows:
 
          pcre              this document
+         pcre-config       show PCRE installation configuration information
          pcreapi           details of PCRE's native C API
          pcrebuild         options for building PCRE
          pcrecallout       details of the callout feature
@@ -215,13 +216,13 @@ AUTHOR
        Cambridge CB2 3QH, England.
 
        Putting an actual email address here seems to have been a spam  magnet,
-       so I've taken it away. If you want to email me, use my initial and sur-
-       name, separated by a dot, at the domain ucs.cam.ac.uk.
+       so  I've  taken  it away. If you want to email me, use my two initials,
+       followed by the two digits 10, at the domain cam.ac.uk.
 
 
 REVISION
 
-       Last updated: 06 March 2007
+       Last updated: 18 April 2007
        Copyright (c) 1997-2007 University of Cambridge.
 ------------------------------------------------------------------------------
 
